# pipeline

./: .gitignore  CMakeLists.txt  test  upipe.cpp
include/: commands.hpp
src/: CMakeLists.txt  commands.cpp
tests/: CMakeLists.txt  commands_test.cpp
